app/globals.css
/* ... */
[class*="swiper-nav-button-"]{
  --size: 48px;
  flex-shrink: 0;
  width: var(--size);
  height: var(--size);
  background: #ffffff;
  border: 1px solid #E9E9E9;
  border-radius: 100%;
  position: absolute;
  z-index: 2;
  top: 50%;
  transform: translateY(-50%);
  box-shadow: 1px 14px 37px 0px #0000001C;
  cursor: pointer;
  -moz-transition: all 300ms ease-in-out;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}
.swiper-nav-button-prev{
  left: calc(-.5 * var(--size));
}
.swiper-nav-button-next{
  right: calc(-.5 * var(--size));
}
[class*="swiper-nav-button-"]:hover{
  background: #2B316E;
  border-color: #2B316E;
  color: #ffffff;
}
[class*="swiper-nav-button-"][disabled]{
  opacity: .5;
  cursor: not-allowed;
}

.customBackdrop {
  background-color: rgba(0,0,0,0.8);
  backdrop-filter: blur(2px);
}
/* Wrapper */
.custom_image {
	display: block;
	position: relative;
	z-index: 1;
	overflow: hidden;
	--loader: 24px;
}
.custom_image:has(.loading)::after{
	content: '';
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%) rotate(0deg);
	z-index: 1;
	width: var(--loader);
	height: var(--loader);
	border: 2px solid #363636;
	border-right-color: transparent;
	border-radius: 100%;
	animation: imageLoader 1s ease-in-out 0s infinite forwards;
}
@keyframes imageLoader {
	to{transform: translate(-50%, -50%) rotate(360deg);}
}
/* Base image */
.fixedImage{
	padding-top: 56.25%;
}
.custom-image {
  opacity: 0;
  transform: scale(1.02);
}
.custom-image.loaded {
  opacity: 1;
  transform: scale(1);
}
.form-error{
  font-size: 14px;
  color: rgba(var(--bs-danger-rgb), var(--bs-text-opacity)) !important;
  line-height: normal;
  margin-bottom: 10px;
}

.abtintrighttbx h2.cmn_black_heading {
	font-size: 32px;
	line-height: normal;
	margin-bottom: 10px;
}
.whatwedlist li {
	font-size: 17px;
	line-height: 26px;
	position: relative;
	display: flex;
	align-items: start;
	gap: 8px;
	margin-bottom: 10px;
}
.whatwedlist li::before {
	font-family: "Font Awesome 7 Free";
	content: "\f058";
	font-weight: 600;
	color: #2c3070;
  display: block;
  flex-shrink: 0;
	font-size: 18px;
}
.alert {
	padding: 8px 12px;
	font-size: .9em;
}
.screen-reader-text {
	clip: rect(1px,1px,1px,1px);
	word-wrap: normal !important;
	border: 0;
	clip-path: inset(50%);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	overflow-wrap: normal !important;
	padding: 0;
	position: absolute !important;
	width: 1px;
}
.table{
  font-size: 16px;
}
.form-check-input:checked {
	background-color: #3d3f82;
	border-color: #3d3f82;
}
.donation-container{
  display: grid;
  row-gap: 20px;
}
.donation_data ol{
  list-style: auto;
  display: grid;
  row-gap: 20px;
}

.inner_mdlprheading{
  text-align: center;
  width: 80%;
  margin: 0 auto 70px;
  border-bottom: 1px solid #ededed;
  padding-bottom: 40px;
}
.text-primary {
	color: rgb(212, 175, 55) !important;
}
.invalid-feedback{
  font-size: 15px;
}
label{
  color: #222;
}

/* accessibility.module.css */
.filter-grayscale .rj_web{
  filter: grayscale(100%);
}
.filter-negetive .rj_web{
  filter: invert(100%);
}
.filter-bright .rj_web{
  filter: brightness(120%);
}
/* negetive */
/* .filter-negetive .rj_web main > :is(section, div) > :is(section, div), 
.filter-negetive .donation_section{
  background-color: #000000 !important;
  color: #ffffff;
}
.filter-negetive .thank-you-page{
  background: #000000;  
}
.filter-negetive .donation_section{
  border-top: 1px solid #2d2d2d;
}
.filter-negetive .cmn_black_heading {
  color: #ffffff;
}
.filter-negetive :is(
  .smallsubhead,
  .cmn_black_heading span,
  .event_date
){
	color: #d4af37;
}
.filter-negetive .event_card{
  border-width: 2px;
}
.filter-bright :is(
  .form-control,
  .form-select,
  textarea,
  .form-check-input[type="checkbox"],
  .page-link
) {
  border-color: #8f8f8f;
}
.filter-negetive .short_desc_inherit,
.filter-negetive .paragraph :is(h2, h3, h4){
  color: inherit;
}
.filter-negetive .ourReachBtn{
	color: #d4af37;
} */
/* bright */
/* .filter-bright .info_box{
  background: #cdcdcd;
}
.filter-bright .ourReachBtn{
	border-color: currentColor;
}
.filter-bright .counterCircle{
	background: #cdcdcd;
}
.filter-bright .inner_mdlprheading{
	border-color: #cbc6c6;
}
.filter-bright .thank-you-page{
  background: #d0d0d0;  
}
.filter-grayscale .filter-btn-grey{
  background: #5b5b5b;
  color: #ffffff;
}
.filter-negetive .filter-btn-negetive{
  background: #d4af37;
  color: #000000;
}
.filter-bright .filter-btn-bright{
  background: #f8f6ee;
  color: #3d3f82;
}
.filter-bright .urgentNeeds_content li{
  border-color: #cdc7c7;
}
.filter-bright .testimonialslider .card{
  background: #cfcfcf;
} */
/* 1400px */
@media only screen and (max-width: 1600px){
  .cmn_white_heading.big, .cmn_black_heading.big {
    font-size: 48px;
  }
  body{
    font-size: 17px;
  }
}
/* 1200px */
@media only screen and (max-width: 1399px){
  body{
    font-size: 16px;
  }
  .cmn_black_heading, .cmn_white_heading{
    font-size: 36px;
    margin-bottom: 20px;
  }
  .cmn_white_heading.big, .cmn_black_heading.big{
    font-size: 42px;
  }
  .inner_mdlprheading{
    margin-bottom: 56px;
    padding-bottom: 36px;
  }
  .abtintrighttbx h2.cmn_black_heading{
    font-size: 28px;
    margin-bottom: 4px;
  }
  .whatwedo {
    margin-top: 16px;
  }
}
/* 992px */
@media only screen and (max-width: 1199px){
  .swiper-button-next, .swiper-button-prev{
    --swiper-navigation-size: 36px;
  }
  [class*="swiper-nav-button-"]{
    --size: 36px;
  }
  .swiper-button-next svg.swiper-navigation-icon, .swiper-button-prev svg.swiper-navigation-icon {
    width: 6px;
  }
  .cmn_black_heading, .cmn_white_heading{
    font-size: 32px;
    margin-bottom: 16px;
  }
}
/* ... */

